# RatecheckerAPI_Rust_Rocket_

./: Cargo.toml  README.md
src/: main.rs  rate.rs
